--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,8 +6,7 @@ name: Create and publish a Docker image
 
 on:
   push:
-    tags:
-      - 'release*'
+    branches: ['release*'] 
 
 env:
   REGISTRY: ghcr.io
